--- a/modules/administration/pages/auditing.adoc
+++ b/modules/administration/pages/auditing.adoc
@@ -25,10 +25,10 @@ CVE identification numbers use the form ``CVE-YEAR-XXXX``.
 
 In the {productname} {webui}, navigate to menu:Audit[CVE Audit] to see a list of all clients and their current patch status.
 
-By default, the CVE data is updated at 2300 every day.
+By default, the patch data is updated at 23:00 every day.
 We recommend that before you begin a CVE audit you refresh the data to ensure you have the latest patches.
 
-.Procedure: Updating CVE Data
+.Procedure: Updating Patch Data
 . In the {productname} {webui}, navigate to menu:Admin[Task Schedules] and select the ``cve-server-channels-default`` schedule.
 . Click btn:[cve-server-channels-bunch].
 . Click btn:[Single Run Schedule] to schedule the task.
@@ -42,7 +42,7 @@ Allow the task to complete before continuing with the CVE audit.
 
 For more information about the patch status icons used on this page, see xref:reference:audit/audit-cve-audit.adoc[].
 
-For each system, the [guimenu]``Next Action`` column provides information about what you need to do to address vulnerabilities.
+For each system, the [guimenu]``Actions`` column provides information about what you need to do to address vulnerabilities.
 If applicable, a list of candidate channels or patches is also given.
 You can also assign systems to a [guimenu]``System Set`` for further batch processing.
 
@@ -54,7 +54,7 @@ For more information about this method, see the {productname} API Guide.
 The CVE Audit operation relies on two primary data sources: Channels and OVAL.
 These two sources provide us with metadata for conducting CVE audits, each serving a distinct purpose.
 
-1. **Channels:** Channels include the updated software packages, which include patches, and provide insights into the essential patches required to address CVEs.
+1. **Channels:** Channels include the updated software packages, which include patches, and provide insights into the essential patches required to address vulnerabilities.
 
 2. **OVAL:** In contrast, OVAL data supplies information about the vulnerabilities themselves and the packages that render
 a system vulnerable to a CVE.
@@ -75,7 +75,7 @@ By default, OVAL data, is updated at 23:00 every day. We recommend that before y
 . Click btn:[Single Run Schedule] to schedule the task.
 Allow the task to complete before continuing with the CVE audit.
 
-To ensure the integrity and currency of the OVAL data, {productname} exclusively depend on data provided by the OS products maintainers. Below, you can find the list of OVAL data sources.
+To ensure the integrity and currency of the OVAL data, {productname} exclusively consumes OVAL data from the official maintainers of every product. Below, you can find the list of OVAL data sources.
 
 [[oval-sources]]
 [cols="1,1", options="header"]
