--- a/modules/administration/pages/auditing.adoc
+++ b/modules/administration/pages/auditing.adoc
@@ -75,6 +75,19 @@ By default, OVAL data, is updated at 23:00 every day. We recommend that before y
 . Click btn:[Single Run Schedule] to schedule the task.
 Allow the task to complete before continuing with the CVE audit.
 
+=== Collecting CPE
+
+To be able to accurately identify what vulnerabilities apply to a certain client, we need to identify the operating system product that client uses. To do that, we collect the CPE (Common Platform Enumeration) of the client as a salt grain, then we save it to the database.
+
+The cpe of newly registered clients will be automatically collected and saved to the database. However, for existing clients, it is necessary to execute the ``Update Packages List`` action at least once to
+
+.Procedure: Update Packages List
+. In the {productname} {webui}, navigate to menu:Systems[System List > All] and select a client.
+. Then go to the [guimenu]``Software`` tab and select the [guimenu]``Packages`` sub-tab.
+. Click btn:[Update Packages List] to update packages and collect the CPE of client.
+
+=== OVAL Sources
+
 To ensure the integrity and currency of the OVAL data, {productname} exclusively consumes OVAL data from the official maintainers of every product. Below, you can find the list of OVAL data sources.
 
 [[oval-sources]]
