--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -66,6 +66,7 @@ endif::[]
 *** xref:troubleshooting/tshoot-disabling-fqdns-grain.adoc[Disabling the FQDNS grain]
 *** xref:troubleshooting/tshoot-diskspace.adoc[Disk Space]
 *** xref:troubleshooting/tshoot-firewalls.adoc[Firewalls]
+*** xref:troubleshooting/tshoot-hardware-refresh.adoc[Hardware Refresh]
 *** xref:troubleshooting/tshoot-highsynctimesoverwan.adoc[High Sync Times Over WAN]
 *** xref:troubleshooting/tshoot-inactiveclients.adoc[Inactive Clients]
 *** xref:troubleshooting/tshoot-iss.adoc[Inter-Server Synchronization]
