System Details Migrate was renamed to Transfer some time ago

--- a/modules/reference/nav-reference-guide.adoc
+++ b/modules/reference/nav-reference-guide.adoc
@@ -30,7 +30,7 @@ endif::[]
 ***** xref:systems/system-details/sd-remote-command.adoc[Remote Command]
 ***** xref:systems/system-details/sd-reactivation.adoc[Reactivation]
 ***** xref:systems/system-details/sd-hardware.adoc[Hardware]
-***** xref:systems/system-details/sd-migrate.adoc[Migrate]
+***** xref:systems/system-details/sd-transfer.adoc[Transfer]
 ***** xref:systems/system-details/sd-notes.adoc[Notes]
 ***** xref:systems/system-details/sd-custom-info.adoc[Custom Info]
 ***** xref:systems/system-details/sd-proxy.adoc[Proxy]
