RHEL 9 was missing from the support matrix in the Install Guide.

--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -127,6 +127,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {rhel} 9
+| {x86_64}
+| {cross}
+| {check}
+
 | {rhel} 8
 | {x86_64}
 | {cross}
