--- a/modules/installation-and-upgrade/pages/proxy-registration.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-registration.adoc
@@ -37,8 +37,8 @@ image::proxy-key.png[]
 * SLE-Module-Basesystem15-{sp-base}-Updates
 * SLE-Module-Server-Applications15-{sp-base}-Pool
 * SLE-Module-Server-Applications15-{sp-base}-Updates
-* SLE-Module-SUSE-Manager-Proxy-4.3-Pool
-* SLE-Module-SUSE-Manager-Proxy-4.3-Updates
+* SLE-Module-SUSE-Manager-Proxy-{productnumber}-Pool
+* SLE-Module-SUSE-Manager-Proxy-{productnumber}-Updates
 +
 The [systemitem]``SLE-Product-SUSE-Manager-Proxy-4.3-Updates`` channel is mandatory.
 +
