--- a/modules/quickstart/pages/quickstart-install-suma-proxy.adoc
+++ b/modules/quickstart/pages/quickstart-install-suma-proxy.adoc
@@ -66,7 +66,7 @@ image::proxy-key.png[]
 * SLE-Module-Server-Applications15-{sp-base}-Pool
 * SLE-Module-Server-Applications15-{sp-base}-Updates
 * SLE-Module-SUSE-Manager-Proxy-4.3-Pool
-* SLE-Module-SUSE-Manager-Proxy-{productnumber}-Updates
+* SLE-Module-SUSE-Manager-Proxy-4.3-Updates
 +
 The [systemitem]``SLE-Product-SUSE-Manager-Proxy-4.3-Updates`` channel is mandatory.
 +
