Backport439 sle15sp4 #2381 keichwa (#2499)
* revert

* 4.3.7 SP5 patch jcayouette (#2381)

* update

* adjusted versioning

* Update install-vm.adoc

* add entry

* Update .changelog

* Update modules/installation-and-upgrade/pages/proxy-registration.adoc

* Update modules/quickstart/pages/quickstart-install-suma-proxy.adoc

* minorversion

* Update .changelog

Co-authored-by: Marina Latini <marina.latini@suse.com>

* Update modules/installation-and-upgrade/pages/install-vm.adoc

* Update .changelog

* Update modules/installation-and-upgrade/pages/proxy-registration.adoc

Co-authored-by: Marina Latini <marina.latini@suse.com>

* Update modules/quickstart/pages/quickstart-install-suma-proxy.adoc

Co-authored-by: Marina Latini <marina.latini@suse.com>

* Update modules/installation-and-upgrade/pages/proxy-registration.adoc

* Update modules/installation-and-upgrade/pages/proxy-registration.adoc

* Update modules/quickstart/pages/quickstart-install-suma-proxy.adoc

* Update modules/quickstart/pages/quickstart-install-suma-proxy.adoc

---------

Co-authored-by: Joseph Cayouette <jcayouette@suse.com>
Co-authored-by: Marina Latini <marina.latini@suse.com>
Co-authored-by: Ornela Marić <omaric@suse.com>

--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -21,7 +21,7 @@ These are suitable for a quick test installation, such as a server with one clie
 If you want to use a production environment, review the requirements listed in xref:hardware-requirements.adoc[].
 ====
 
-In the following table replace {sles-version}-{sp-version} with the actual product version string.
+In the following table replace {sles-version}-{sp-base} with the actual product version string.
 Find the {minimalsles} image at https://download.suse.com/.
 
 [cols="1,1", options="header"]
@@ -115,9 +115,9 @@ SUSEConnect -e <EMAIL_ADDRESS> -r <SUSE_MANAGER_CODE> \
 +
 
 ----
-SUSEConnect -p sle-module-basesystem/15.5/x86_64
-SUSEConnect -p sle-module-server-applications/15.5/x86_64
-SUSEConnect -p sle-module-web-scripting/15.5/x86_64
+SUSEConnect -p sle-module-basesystem/15.4/x86_64
+SUSEConnect -p sle-module-server-applications/15.4/x86_64
+SUSEConnect -p sle-module-web-scripting/15.4/x86_64
 SUSEConnect -p sle-module-suse-manager-server/<productnumber>/x86_64
 ----
 +
