--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -21,7 +21,9 @@ These are suitable for a quick test installation, such as a server with one clie
 If you want to use a production environment, review the requirements listed in xref:hardware-requirements.adoc[].
 ====
 
-In the following table, replace {sles-version}-{sp-base} with the actual product version string.
+
+In the following table replace {sles-version}-{sp-base} with the actual product version string.
+
 Find the {minimalsles} image at https://download.suse.com/.
 
 [cols="1,1", options="header"]
@@ -119,6 +121,7 @@ SUSEConnect -p sle-module-basesystem/15.4/x86_64
 SUSEConnect -p sle-module-server-applications/15.4/x86_64
 SUSEConnect -p sle-module-web-scripting/15.4/x86_64
 SUSEConnect -p sle-module-suse-manager-server/<productnumber>/x86_64
+
 ----
 +
 {minimalsles} is configured to install only required packages.
