xref to task-schedules.adoc fix typo

--- a/modules/administration/pages/troubleshooting/tshoot-hardware-refresh.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-hardware-refresh.adoc
@@ -24,3 +24,4 @@ This can result in misleading information if the client or parts of the clients 
 The user can see it in the {productname} {webui} in the menu:Systems[Details > Hardware] tab.
 
 Hardware refresh is part of the [systemitem]``system-profile-refresh`` taskomatic job that runs once a month.
+For more information about configuring [systemitem]``system-profile-refresh``, see xref:administration:task-schedules.adoc[].
