--- a/modules/reference/pages/systems/system-details/sd-hardware.adoc
+++ b/modules/reference/pages/systems/system-details/sd-hardware.adoc
@@ -11,5 +11,5 @@ Click btn:[Update Properties] to save your changes.
 [NOTE]
 ====
 Refreshing hardware information happens once a month automatically when the [systemitem]``system-profile-refresh`` taskomatic job runs.
-For more information, see xref:administartion:troubleshooting/tshoot-hardware-refresh.adoc[].
+For more information, see xref:administration:troubleshooting/tshoot-hardware-refresh.adoc[].
 ====
