--- a/modules/installation-and-upgrade/pages/server-intro.adoc
+++ b/modules/installation-and-upgrade/pages/server-intro.adoc
@@ -6,37 +6,41 @@ To determine which upgrade procedure you need, look at which part of the version
 
 [NOTE]
 ====
-The version number below are just examples.
+The version numbers below are just examples.
 Do not understand them as most recent available options.
-{suse} uses these numbers for illustrative purposes only!
+{suse} uses these numbers for illustrative purposes only.
 ====
 
 
 
 Major Version Upgrade (X Upgrade)::
-Such a major upgrade usually is an upgrade from X.Y to X+1.0 or to X+1.1, where Y is the latest minor version of the X series.
+Major upgrade is usually an upgrade from X.Y to X+1.0 or to X+1.1, where Y is the latest minor version of the X series.
 For example:
 
-* From version 3.2 to 4.0 or to 4.1 (upgrading directly from 3.2 to 4.2 or later is s not supported).
+* From version 3.2 to 4.0 or to 4.1 (upgrading directly from 3.2 to 4.2 or later is not supported).
 
 * See xref:installation-and-upgrade:server-x.adoc[].
 
 Minor Version Upgrade (Y Upgrade)::
-Upgrading to the next minor version.
+Minor upgrade refers to upgrading to the next minor version, from X.Y to X.Y+1.
 This is often referred to as a product migration, service pack migration, or SP migration.
-Such a minor upgrade is an upgrade from X.Y to X.Y+1.
 For example:
 
 * From 4.2 to 4.3.
 
-If you take a closer look, you always upgrade from and to the latest patch level of the minor version.
+[IMPORTANT]
+====
+You always upgrade from and to the latest patch level of the minor version.
+====
 For example, from 4.2.12 to 4.3.8.
 
 * See xref:installation-and-upgrade:server-y.adoc[].
 
 Patch Level Upgrade (Z Upgrade)::
-* Upgrading within the same minor version.
+Upgrading within the same minor version.
 This is often referred to as a maintenance update or MU.
-For example, upgrading from 4.3.7 to 4.3.8.
+For example:
+
+* From 4.3.7 to 4.3.8.
 
 * See xref:installation-and-upgrade:server-z.adoc[].
