--- a/modules/installation-and-upgrade/pages/server-y-zypper.adoc
+++ b/modules/installation-and-upgrade/pages/server-y-zypper.adoc
@@ -1,6 +1,6 @@
 // FIXME: server-migrator.sh???
 [[server-y-zypper]]
-= Server - Minor Version Upgrade with Zypper
+= Server - Minor version upgrade with ``zypper``
 
 
 To perform the upgrade with Zypper, use the Zypper migration tool.
@@ -8,7 +8,7 @@ To perform the upgrade with Zypper, use the Zypper migration tool.
 
 
 // FIXME: Adjust version numbers
-.Procedure: Upgrading with Zypper
+.Procedure: Upgrading with ``zypper``
 
 . From the command prompt, as root, ensure the spacewalk services are not running:
 +
