--- a/modules/retail/nav-retail-guide.adoc
+++ b/modules/retail/nav-retail-guide.adoc
@@ -41,14 +41,7 @@ endif::[]
 *** xref:retail-mass-config-yaml.adoc[Mass Configuration YAML Example]
 *** xref:retail-delta-images.adoc[Delta Images]
 *** xref:retail-admin-network.adoc[Network Administration]
-** xref:retail-migration-intro.adoc[Retail Migration]
-
-ifeval::[{suma-content} == true]
-*** xref:retail-prepare-migration.adoc[Prepare for Migration]
-*** xref:retail-migration-slepostosuma.adoc[Migrate SLEPOS to SUMA]
-endif::[]
-
-*** xref:retail-upgrade-branchserver.adoc[Upgrade Branch Server]
+** xref:retail-upgrade-branchserver.adoc[Upgrade Branch Server]
 ** xref:example-configurations.adoc[Example configurations]
 *** xref:dedicated-with-formulas.adoc[Dedicated terminal network configured using formulas]
 *** xref:dedicated-with-scripts.adoc[Dedicated terminal network configured using scripts]
