change leap micro table layout according to clients-opensuseleap.adoc
https://github.com/SUSE/spacewalk/issues/22649

--- a/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
@@ -59,19 +59,14 @@ endif::[]
 ifeval::[{uyuni-content} == true]
 [[opensuse-channels-cli]]
 
-[cols="1,1,1,1", options="header"]
+[cols="1,1", options="header"]
 .{opensuse} Channels - CLI
 |===
 
-| OS Version
-| Base Channel
-| Client Channel
-| SLE Updates Channel
-
-| {leapmicro} 5.3
-| opensuse_micro5_3
-| opensuse_micro5_3-sle-updates
-| opensuse_micro5_3-uyuni-client
+| OS Version          | {leapmicro} 5.3
+| Base Channel	      | opensuse_micro5_3
+| Client Channel      | opensuse_micro5_3-sle-updates
+| SLE Updates Channel | opensuse_micro5_3-uyuni-client
 
 |===
 
