Fixed missing RHEL 7 in the supported clients table.

--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -107,11 +107,15 @@ ifeval::[{suma-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
+| {rhel} 9
+| {x86_64}
+| {check}
+
 | {rhel} 8
 | {x86_64}
 | {check}
 
-| {rhel} 9
+| {rhel} 7
 | {x86_64}
 | {check}
 
