monitoring on branch server https://github.com/SUSE/spacewalk/issues/17497

--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -26,7 +26,10 @@ Branch servers should be physically located close to point-of-service terminals,
 Branch servers provide services for PXE boot, and act as an image cache, Salt broker, and proxy for software components (RPM packages).
 The branch server can also manage local networking, and provide DHCP and DNS services.
 
-
+[NOTE]
+====
+Monitoring
+====
 
 == Point-of-Service Terminals
 
