--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -57,7 +57,7 @@ endif::[]
 **** xref:clients-slemicro.adoc[SLE Micro Clients]
 
 ifeval::[{suma-content} == true]
-**** xref:clients-sleses.adoc[SUSE Liberty Linux Support Clients]
+**** xref:clients-sleses.adoc[SUSE Liberty Linux Clients]
 endif::[]
 
 **** xref:clients-sle.adoc[SUSE Linux Enterprise Clients]
