Retail environment monitoring option: Prometheus and separately Grafana https://github.com/SUSE/spacewalk/issues/17497

--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -20,6 +20,8 @@ They are used to securely build operating system images.
 
 For more information on build hosts, see xref:administration:image-management.adoc[].
 
+
+
 == Branch Servers
 
 Branch servers should be physically located close to point-of-service terminals, such as in an individual store or branch office.
@@ -28,7 +30,8 @@ The branch server can also manage local networking, and provide DHCP and DNS ser
 
 [NOTE]
 ====
-Monitoring
+For monitoring, you can install Prometheus server on the Branch servers, and, for visualization and analysis, Grafana with multiple data sources on a dedicated host.
+For more information about Prometheus and Grafana, see xref:administration:monitoring.adoc[].
 ====
 
 == Point-of-Service Terminals
