change table layout
https://github.com/SUSE/spacewalk/issues/22649

--- a/modules/retail/pages/retail-uyuni-branchserver.adoc
+++ b/modules/retail/pages/retail-uyuni-branchserver.adoc
@@ -22,27 +22,18 @@ Before you register {productname} branch servers and terminals to your {productn
 The products you need for this procedure are:
 
 [[opensuse-channels-cli]]
-[cols="1,1,1,1,1,1,1,1", options="header"]
+[cols="1,1", options="header"]
 .{opensuse} Channels - CLI
 |===
 
-| OS Version
-| Base Channel
-| Client Channel
-| Updates Channel
-| Non-OSS Channel
-| Non-OSS Updates Channel
-| Backports Updates Channel
-| SLE Updates Channel
-
-| {opensuse} Leap 15.4
-| opensuse_leap15_4
-| opensuse_leap15_4-uyuni-client
-| opensuse_leap15_4-updates
-| opensuse_leap15_4-non-oss
-| opensuse_leap15_4-non-oss-updates
-| opensuse_leap15_4-backports-updates
-| opensuse_leap15_4-sle-updates
+| OS Version               | {opensuse} Leap 15.4
+| Base Channel		   | opensuse_leap15_4
+| Client Channel	   | opensuse_leap15_4-uyuni-client
+| Updates Channel	   | opensuse_leap15_4-updates
+| Non-OSS Channel	   | opensuse_leap15_4-non-oss
+| Non-OSS Updates Channel  | opensuse_leap15_4-non-oss-updates
+| Backports Updates Channel| opensuse_leap15_4-backports-updates
+| SLE Updates Channel	   | opensuse_leap15_4-sle-updates
 
 |===
 
