Fix SLL name (#2507)

--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -58,7 +58,7 @@ endif::[]
 **** xref:clients-slemicro.adoc[SLE Micro Clients]
 
 ifeval::[{suma-content} == true]
-**** xref:clients-sleses.adoc[SUSE Liberty Linux Support Clients]
+**** xref:clients-sleses.adoc[SUSE Liberty Linux Clients]
 endif::[]
 
 *** xref:registration-overview-opensuse.adoc[openSUSE Client Registration]
