--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -48,7 +48,7 @@ endif::[]
 **** xref:registration-cli.adoc[Register on the Command Line]
 *** xref:registration-overview-suse.adoc[SUSE Client Registration]
 **** xref:clients-slemicro.adoc[SLE Micro Clients]
-**** xref:clients-sleses.adoc[SUSE Liberty Linux Support Clients]
+**** xref:clients-sleses.adoc[SUSE Liberty Linux Clients]
 **** xref:clients-sle.adoc[SUSE Linux Enterprise Clients]
 *** xref:registration-overview-opensuse.adoc[openSUSE Client Registration]
 **** xref:clients-opensuseleap.adoc[openSUSE Leap Clients]
