--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -30,7 +30,8 @@ The branch server can also manage local networking, and provide DHCP and DNS ser
 
 [NOTE]
 ====
-For monitoring, you can install Prometheus server on the Branch servers, and, for visualization and analysis, Grafana with multiple data sources on a dedicated host.
+* For monitoring, you can install Prometheus server on the Branch servers.
+* For visualization and analysis, you can install Grafana with multiple data sources on a dedicated host.
 For more information about Prometheus and Grafana, see xref:administration:monitoring.adoc[].
 ====
 
