--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -20,13 +20,20 @@ They are used to securely build operating system images.
 
 For more information on build hosts, see xref:administration:image-management.adoc[].
 
+
+
 == Branch Servers
 
 Branch servers should be physically located close to point-of-service terminals, such as in an individual store or branch office.
 Branch servers provide services for PXE boot, and act as an image cache, Salt broker, and proxy for software components (RPM packages).
 The branch server can also manage local networking, and provide DHCP and DNS services.
 
-
+[NOTE]
+====
+* For monitoring, you can install Prometheus server on the Branch servers.
+* For visualization and analysis, you can install Grafana with multiple data sources on a dedicated host.
+For more information about Prometheus and Grafana, see xref:administration:monitoring.adoc[].
+====
 
 == Point-of-Service Terminals
 
