Proxy base system is SLE 15 SP4 https://github.com/SUSE/spacewalk/issues/22761

--- a/modules/installation-and-upgrade/pages/proxy-registration.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-registration.adoc
@@ -44,7 +44,7 @@ The [systemitem]``SLE-Product-SUSE-Manager-Proxy-4.3-Updates`` channel is mandat
 +
 [IMPORTANT]
 ====
-Before you can select the correct child channels while creating the activation key, ensure you have completely downloaded the {productname} Proxy {productnumber} channel and all the recommended and mandatory {sle} {sles-version} {sp-version} channels.
+Before you can select the correct child channels while creating the activation key, ensure you have completely downloaded the {productname} Proxy {productnumber} channel and all the recommended and mandatory {sle} {sles-version} {sp-base} channels.
 ====
 +
 .Base and Child Proxy Channel
