--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -9,9 +9,9 @@ endif::[]
 
 * xref:specialized-guides-overview.adoc[Specialized Guides]
 ** xref:public-cloud-guide/overview.adoc[Public Cloud Guide]
-*** Generic Public Cloud 
-**** xref:public-cloud-guide/setup.adoc[Initial Setup]
-**** xref:public-cloud-guide/clients.adoc[Client Configuration]
+*** xref:public-cloud-guide/byos/byos-overview.adoc[BYOS Guide]
+**** xref:public-cloud-guide/byos/setup.adoc[Initial Setup]
+**** xref:public-cloud-guide/byos/clients.adoc[Client Configuration]
 *** {payg} Guide
 **** xref:public-cloud-guide/payg/payg-overview.adoc[{payglongform} Overview]
 **** xref:public-cloud-guide/payg/payg-benefits.adoc[Benefits of {payg}]
@@ -19,12 +19,11 @@ endif::[]
 ***** xref:public-cloud-guide/payg/payg-faq.adoc[{payg} FAQ on AWS]
 ***** xref:public-cloud-guide/payg/payg-country-listing.adoc[Supported Country List]
 ***** xref:public-cloud-guide/payg/payg-aws-requirements.adoc[SUSE Manager AWS requirements]
-***** xref:public-cloud-guide/payg/payg-find-the-aws-image.adoc[Find the Image]
-***** xref:public-cloud-guide/payg/payg-configure-the-image.adoc[Configure the Image on EC2]
-***** xref:public-cloud-guide/payg/payg-start-the-image.adoc[Start the Instance]
-***** xref:public-cloud-guide/payg/payg-initial-setup.adoc[Initial Setup]
-***** xref:public-cloud-guide/payg/payg-start-the-server.adoc[Start the Server]
+***** xref:public-cloud-guide/payg/payg-find-the-aws-image.adoc[Obtaining the Image]
+***** xref:public-cloud-guide/payg/payg-configure-the-image.adoc[Configure and Start the image on EC2]
+***** xref:public-cloud-guide/payg/payg-server-setup.adoc[SUSE Manager PAYG Server Setup]
 ***** xref:public-cloud-guide/payg/payg-webui-configuration.adoc[WebUI Configuration]
+***** xref:public-cloud-guide/payg/payg-bootstrapping-process.adoc[Client Bootstrapping process]
 //*** xref:public-cloud-guide/payg/payg-and-azure.adoc[PAYG and Azure]
 //**** xref:public-cloud-guide/payg/payg-getting-started-with-azure.adoc[Getting started with Azure]
 //**** xref:public-cloud-guide/payg/payg-azure-requirements[Azure requirements] 
