--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-find-the-aws-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-find-the-aws-image.adoc
@@ -7,21 +7,21 @@ Follow these step-by-step instructions to locate the SUSE Manager {productnumber
 
 . Login to the AWS **Management Console**:
 
-* In your browser navigate to the link:https://aws.amazon.com/console/[AWS Management Console].
-* Enter your AWS credentials and login.
+.. In your browser navigate to the link:https://aws.amazon.com/console/[AWS Management Console].
+.. Enter your AWS credentials and login.
 
 . Open the **EC2 Dashboard**:
 
-* From the AWS Management Console dashboard, locate the menu:Services[] dropdown.
-* From the menu select menu:EC2[] under the **Compute** section.
+.. From the AWS Management Console dashboard, locate the menu:Services[] dropdown.
+.. From the menu select menu:EC2[] under the **Compute** section.
 
 . Access the **AWS Marketplace**:
 
-* In the EC2 dashboard, in the main content section, you'll find the “Launch Instance” button. Click it.
-* This will lead you to the “Choose an Amazon Machine Image (AMI)” page.
-* Select **Browse more AMIs**
-* Search for **SUSE Manager**
-* Depending on your location select your AMI image. **SUSE Manager Server Family (EU and UK only)** or **SUSE Manager Server Family (non-EU and non-UK-only)**.
+.. In the EC2 dashboard, in the main content section, you'll find the “Launch Instance” button. Click it.
+.. This will lead you to the “Choose an Amazon Machine Image (AMI)” page.
+.. Select **Browse more AMIs**
+.. Search for **SUSE Manager**
+.. Depending on your location select your AMI image. **SUSE Manager Server Family (EU and UK only)** or **SUSE Manager Server Family (non-EU and non-UK-only)**.
 
 . Click **Select**.
 
