--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
@@ -1,1 +1,70 @@
-= WebUI configuration
+= SUSE Manager {payglongform} WebUI setup 
+
+
+== Requirements
+
+{productname} must be setup and running on AWS. For more information on finding and setting up {productname}, see: xref:public-cloud-guide/payg/payg-find-the-aws-image.adoc[Obtaining the Image]
+
+. Login to the SUSE Manager Server WebUI.
+
+. Select menu:Admin[Setup Wizard].
+
+
+
+== Overview of the {payg} schedule check and instance-flavor-check tool
+
+update-payg-default schedule task::
+Go to menu:Admin[Task Schedules] to locate the **update-payg-default** task.
+This task is configured by default to run every 10 minutes.
+This task checks for running payg instances by executing the instance-flavor-check tool.
+
+
+instance-flavor-check Tool::
+By default the **instance-flavor-check** tool is installed; it must remain installed as it determines PAYG instance status.
+Once executed, it identifies the system as PAYG.
+
+
+== Configure the {payg} credentials and product list
+
+[NOTE]
+====
+On a fresh server, the organization credentials table listed at menu:Admin[Setup Wizard > Organization Credentials] and the Products table listed under menu:Admin[Setup Wizard > Products] will be empty.
+====
+
+.Procedure: Adding PAYG Credentials and Refreshing the Product List
+
+. Visit the menu:Admin[Setup Wizard > Pay-as-you-go] tab to view and manage {payg} credentials.
+
+. After filling in the credentials, navigate to the menu:Admin[Products] tab and click btn:[Refresh].
+
+. Once the refresh completes the following products are listed:
+* SUSE Manager Proxy
+* SUSE Manager Server
+* Free products
+
+
+== Adding additional {payg} SUSE products as clients
+
+.Procedure: Deploying {payg} SUSE Linux Enterprise instances in AWS
+
+. Search for the {sle} {payg} instance on AWS.
+
+. Configure the instance as needed.
+
+. Start the instance.
+
+
+.Procedure: Connecting {payg} SUSE Linux Enterprise instances to {productname}
+
+. Return to the SUSE Manager Server WebUI.
+. Navigate to menu:Admin[Setup Wizard > Pay-as-you-go] and click the btn:[+Add Pay-as-you-go] button.
+. Add a description.
+. Complete the instance SSH connection data:
+  * Host: `URL of the machine`
+  * SSH Port: `22`
+  * User: `<user>`
+  * Password: `<password>`
+  * SSH Private Key
+. Click btn:[Create] and wait for the sync to finish.
+. Subsequently, go to menu:Admin[Setup Wizard > Products] to access SUSE Linux Enterprise products.
+
