--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-aws-requirements.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-aws-requirements.adoc
@@ -1,6 +1,6 @@
 = AWS System Requirements
 
-When setting up a SUSE Manager {payg} instance on AWS, it's essential to carefully consider the system requirements to ensure optimal performance and functionality. The requirements outlined below have been tailored to provide a smooth deployment and operation. 
+When setting up a SUSE Manager {payg} instance on AWS, it's essential to consider system requirements for optimal performance and functionality. The default requirements outlined below have been tailored for smooth deployment and operation. 
 
 .AWS System Requirements
 [cols="2,1"]
