--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-server-setup.adoc
@@ -3,17 +3,19 @@
 The next step will be to ssh into your {AWS} instance.
 
 .Procedure: Server Setup using SSH
-. ssh into the running instance.
+. ssh into the running {productname} Server instance.
 
-. Prior to running setup, update the system.
+. Prior to running {productname} setup, update the system.
 
-* Execute 
+.. Execute 
 +
 
 ```
 sudo zypper ref
 sudo zypper up
 ```
+
+
 
 
 
