update setup section

--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -18,10 +18,10 @@ endif::[]
 **** {payg} on AWS
 ***** xref:public-cloud-guide/payg/payg-faq.adoc[{payg} FAQ on AWS]
 ***** xref:public-cloud-guide/payg/payg-country-listing.adoc[Supported Country List]
-***** xref:public-cloud-guide/payg/payg-aws-requirements.adoc[SUSE Manager AWS requirements]
-***** xref:public-cloud-guide/payg/payg-find-the-aws-image.adoc[Obtaining the Image]
-***** xref:public-cloud-guide/payg/payg-configure-the-image.adoc[Configure and Start the image on EC2]
-***** xref:public-cloud-guide/payg/payg-server-setup.adoc[SUSE Manager PAYG Server Setup]
+***** xref:public-cloud-guide/payg/payg-aws-requirements.adoc[SUSE Manager on AWS requirements]
+***** xref:public-cloud-guide/payg/payg-find-the-aws-image.adoc[Find the Image]
+***** xref:public-cloud-guide/payg/payg-configure-the-image.adoc[Configure and Start the image]
+***** xref:public-cloud-guide/payg/payg-server-setup.adoc[Server Setup]
 ***** xref:public-cloud-guide/payg/payg-webui-configuration.adoc[WebUI Configuration]
 ***** xref:public-cloud-guide/payg/payg-bootstrapping-process.adoc[Client Bootstrapping process]
 //*** xref:public-cloud-guide/payg/payg-and-azure.adoc[PAYG and Azure]
