--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-server-setup.adoc
@@ -1,19 +1,70 @@
 = Initial setup
 
-The next step will be to ssh into your {AWS} instance.
 
-.Procedure: Server Setup using SSH
-. ssh into the running {productname} Server instance.
 
-. Prior to running {productname} setup, update the system.
+.Procedure: Login and update the system
 
-.. Execute 
+. SSH into your {AWS} instance.
+
+. Switch to the root user and update the system.
 +
 
 ```
-sudo zypper ref
-sudo zypper up
+sudo -i
+zypper refresh
+zypper update
 ```
+
+. Configure storage with the **suma-storage** tool. 
+** For help see: `suma-storage --help`
+This tool simplifies creating the storage disk device and database device.
+
+. Use `lsblk` to see the names of your disk devices.
+You will see a list of partitions that were created when we configured the AWS image.
+
+** Root partition 200 GB
+** Spacewalk storage 500 GB 
+** Database storage 80 GB
+
+. Format the command in the following manner: `suma-storage <storage-disk-device> [<database-disk-device>]`
++
+For example: `suma-storage /dev/nvme1n1 /dev/nvme2n1`
+
+[NOTE]
+====
+This command will create the following storage locations:
+
+```
+/pgsql_storage
+/pgsql_storage/pgsql
+```
+
+```
+/manager_storage
+/manager_storage/spacewalk
+```
+
+```
+/var/spacewalk
+/var/cache/rhn
+/var/lib/spacewalk
+```
+====
+
+
+.Run setup
+
+. Execute `yast2 suusemanager_Setup` as root.
+for more information on a typical {productname} installation see: xref:installation-and-upgrade:server-setup.adoc[Server Setup]
+
+
+
+
+
+
+
+
+
 
 
 
