update webui setup

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-server-setup.adoc
@@ -1,9 +1,8 @@
+[[aws-server-setup]]
 = Initial setup
 
 
-
 .Procedure: Login and update the system
-
 . SSH into your {AWS} instance.
 
 . Switch to the root user and update the system.
@@ -54,8 +53,9 @@ This command will create the following storage locations:
 
 .Run setup
 
-. Execute `yast2 suusemanager_Setup` as root.
-for more information on a typical {productname} installation see: xref:installation-and-upgrade:server-setup.adoc[Server Setup]
+Execute `yast2 suusemanager_Setup` as root.
+
+For more information on a typical {productname} installation see: xref:installation-and-upgrade:server-setup.adoc[Server Setup]
 
 
 
