--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
@@ -5,23 +5,28 @@
 
 {productname} must be setup and running on AWS. For more information on finding and setting up {productname}, see: xref:public-cloud-guide/payg/payg-find-the-aws-image.adoc[Obtaining the Image]
 
-. Login to the SUSE Manager Server WebUI.
 
-. Select menu:Admin[Setup Wizard].
-
-
-
-== Overview of the {payg} schedule check and instance-flavor-check tool
+.The instance-flavor-check tool and {payg} schedule check 
+[NOTE]
+====
+instance-flavor-check Tool::
+By default the **instance-flavor-check** tool is installed; it must remain installed as it determines PAYG instance status.
+Once executed, it identifies the system as PAYG.
 
 update-payg-default schedule task::
 Go to menu:Admin[Task Schedules] to locate the **update-payg-default** task.
 This task is configured by default to run every 10 minutes.
-This task checks for running payg instances by executing the instance-flavor-check tool.
+This task checks for running payg instances by executing the **instance-flavor-check** tool.
+====
 
 
-instance-flavor-check Tool::
-By default the **instance-flavor-check** tool is installed; it must remain installed as it determines PAYG instance status.
-Once executed, it identifies the system as PAYG.
+== Login to the Webui
+
+.Procedure: Login
+. Login to the SUSE Manager Server WebUI.
+The username is **admin** the password will be the **Instance ID** on AWS EC2.
+
+. Select menu:Admin[Setup Wizard].
 
 
 == Configure the {payg} credentials and product list
