--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
@@ -46,7 +46,19 @@ On a fresh server, the organization credentials table listed at menu:Admin[Setup
 . Once the refresh completes the following products are listed:
 * SUSE Manager Proxy
 * SUSE Manager Server
-* Free products
+* Free products 
+
+[IMPORTANT]
+====
+Ubuntu and Debian are not currently supported by our RMT servers; however, we have plans to introduce support for these platforms in the near future.
+====
+
+[IMPORTANT]
+====
+SUSE Manager offers support for RHEL, but it's important to note that content still needs to be added manually and isn't available through the cloud-based RMT service.
+
+See: xref:client-configuration:registration-overview-redhat.adoc[Red Hat Client Registration]
+====
 
 
 == Adding additional {payg} SUSE products as clients
@@ -58,6 +70,8 @@ On a fresh server, the organization credentials table listed at menu:Admin[Setup
 . Configure the instance as needed.
 
 . Start the instance.
+
+For more information on {suse} products in the public cloud see: link:https://documentation.suse.com/sle-public-cloud/all/html/public-cloud/cha-intro.html[SUSE Linux Enterprise Public Cloud Guide]
 
 
 .Procedure: Connecting {payg} SUSE Linux Enterprise instances to {productname}
