update byos, and payg overviiew

--- a/modules/specialized-guides/pages/public-cloud-guide/byos/clients.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/byos/clients.adoc
@@ -11,6 +11,8 @@ For instructions on connecting {payg} instances, see xref:installation-and-upgra
 
 == More information
 
+For more information on using {suse} products in the public cloud see: link:https://documentation.suse.com/sle-public-cloud/all/html/public-cloud/cha-intro.html[SUSE Linux Enterprise Public Cloud Guide]
+
 For more {productname} product documentation, see https://documentation.suse.com/suma.
 
 To raise an issue or propose a change to the documentation, use the links under the ``Resources`` menu on the documentation site.
