--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
@@ -1,4 +1,4 @@
-= SUSE Manager {payglongform} WebUI setup 
+= SUSE Manager {payg} WebUI setup 
 
 
 == Requirements
@@ -50,12 +50,11 @@ On a fresh server, the organization credentials table listed at menu:Admin[Setup
 
 [IMPORTANT]
 ====
-Ubuntu and Debian are not currently supported by our RMT servers; however, we have plans to introduce support for these platforms in the near future.
-====
+.Ubuntu and Debian
+Ubuntu and Debian are not currently supported by our RMT servers; however, we have plans to introduce support for these platforms on cloud based services in the near future.
 
-[IMPORTANT]
-====
-SUSE Manager offers support for RHEL, but it's important to note that content still needs to be added manually and isn't available through the cloud-based RMT service.
+.Red Hat Linux Enterprise Clients
+SUSE Manager offers support for Red Hat Linux Enterprise Clients, but it's important to note that content still needs to be added manually and isn't available through the cloud-based RMT service.
 
 See: xref:client-configuration:registration-overview-redhat.adoc[Red Hat Client Registration]
 ====
@@ -71,7 +70,7 @@ See: xref:client-configuration:registration-overview-redhat.adoc[Red Hat Client 
 
 . Start the instance.
 
-For more information on {suse} products in the public cloud see: link:https://documentation.suse.com/sle-public-cloud/all/html/public-cloud/cha-intro.html[SUSE Linux Enterprise Public Cloud Guide]
+For more information on using {suse} products in the public cloud see: link:https://documentation.suse.com/sle-public-cloud/all/html/public-cloud/cha-intro.html[SUSE Linux Enterprise Public Cloud Guide]
 
 
 .Procedure: Connecting {payg} SUSE Linux Enterprise instances to {productname}
