hardware refresh in reference (#2492)
* hardware refresh in admin and reference
https://github.com/SUSE/spacewalk/issues/22535
https://github.com/uyuni-project/uyuni-docs/issues/2168

--- a/modules/reference/pages/systems/system-details/sd-hardware.adoc
+++ b/modules/reference/pages/systems/system-details/sd-hardware.adoc
@@ -7,3 +7,8 @@ Click btn:[Schedule Hardware Refresh] to update this page with the latest hardwa
 To change the primary network interface on the client, select the correct interface in the [guimenu]``Primary Network Interface`` field in the [guimenu]``Networking`` section.
 For clients with multiple fully qualified domain names (FQDNs) configured, change the primary FQDN by selecting it in the [guimenu]``Primary FQDN`` field in the [guimenu]``Networking`` section.
 Click btn:[Update Properties] to save your changes.
+
+[NOTE]
+====
+Refreshing hardware information happens once a month automatically when the [systemitem]``system-profile-refresh`` taskomatic job runs.
+====
