--- a/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
@@ -1,7 +1,7 @@
 [[contact-methods-migrate-trad]]
 = Migrate traditional clients to {salt} clients
 
-To migrate a system from a traditional client to a {salt}, the use can create the {salt} bootstrap script and re-register the client system with it.
+To migrate a system from a traditional client to a {salt}, user can create the {salt} bootstrap script and re-register the client system with it.
 
 This could be done with three procedures: 
 * create a bootstrap script, 
