--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-aws-requirements.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-aws-requirements.adoc
@@ -7,8 +7,14 @@ When setting up a SUSE Manager {payg} instance on AWS, it's essential to conside
 |===
 | Requirement | Details
 
-| Storage
+| root storage
 | 200 GB
+
+| spacewalk storage
+| 500 GB
+
+| database storage
+| 80 GB
 
 | CPU
 | 4 cores; Utilize the latest **m6a** or **m6i** systems, or opt for the older generation **m5a** or **m5i** machines
