--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -16,14 +16,15 @@ endif::[]
 **** xref:public-cloud-guide/payg/payg-overview.adoc[{payglongform} Overview]
 **** xref:public-cloud-guide/payg/payg-benefits.adoc[Benefits of {payg}]
 **** {payg} on AWS
-***** xref:public-cloud-guide/payg/payg-faq.adoc[{payg} FAQ on AWS]
-***** xref:public-cloud-guide/payg/payg-country-listing.adoc[Supported Country List]
 ***** xref:public-cloud-guide/payg/payg-aws-requirements.adoc[SUSE Manager on AWS requirements]
-***** xref:public-cloud-guide/payg/payg-find-the-aws-image.adoc[Find the Image]
-***** xref:public-cloud-guide/payg/payg-configure-the-image.adoc[Configure and Start the image]
-***** xref:public-cloud-guide/payg/payg-server-setup.adoc[Server Setup]
-***** xref:public-cloud-guide/payg/payg-webui-configuration.adoc[WebUI Configuration]
-***** xref:public-cloud-guide/payg/payg-bootstrapping-process.adoc[Client Bootstrapping process]
+***** xref:public-cloud-guide/payg/payg-find-the-aws-image.adoc[1. Find the Image]
+***** xref:public-cloud-guide/payg/payg-configure-the-image.adoc[2. Configure and Start the image]
+***** xref:public-cloud-guide/payg/payg-server-setup.adoc[3. Server Setup]
+***** xref:public-cloud-guide/payg/payg-webui-configuration.adoc[4. WebUI Configuration]
+***** xref:public-cloud-guide/payg/payg-bootstrapping-process.adoc[5. Connecting Clients]
+**** {payg} Appendix
+***** xref:public-cloud-guide/payg/payg-faq.adoc[{payg} FAQ]
+***** xref:public-cloud-guide/payg/payg-country-listing.adoc[Supported Countries]
 //*** xref:public-cloud-guide/payg/payg-and-azure.adoc[PAYG and Azure]
 //**** xref:public-cloud-guide/payg/payg-getting-started-with-azure.adoc[Getting started with Azure]
 //**** xref:public-cloud-guide/payg/payg-azure-requirements[Azure requirements] 
@@ -72,7 +73,7 @@ endif::[]
 **** xref:large-deployments/hub-reporting.adoc[Hub Reporting]
 *** xref:large-deployments/retail-large-scale.adoc[Large Retail Environments]
 *** xref:large-deployments/tuning.adoc[Tuning Large Installations]
-*** xref:large-deployments/monitoring.adoc[Monitoring Large Scale Deployments
+*** xref:large-deployments/monitoring.adoc[Monitoring Large Scale Deployments]
 ** xref:qs-sap/overview.adoc[Quick Start: SAP]
 *** xref:qs-sap/prepare-server.adoc[Prepare Server]
 *** xref:qs-sap/prepare-clients.adoc[Prepare Clients]
