update to navlist

--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -16,9 +16,9 @@ endif::[]
 **** xref:public-cloud-guide/payg/payg-overview.adoc[{payglongform} Overview]
 **** xref:public-cloud-guide/payg/payg-benefits.adoc[Benefits of {payg}]
 **** {payg} on AWS
-***** xref:public-cloud-guide/payg/payg-aws-requirements.adoc[SUSE Manager on AWS requirements]
-***** xref:public-cloud-guide/payg/payg-find-the-aws-image.adoc[1. Find the Image]
-***** xref:public-cloud-guide/payg/payg-configure-the-image.adoc[2. Configure and Start the image]
+***** xref:public-cloud-guide/payg/payg-aws-requirements.adoc[AWS requirements]
+***** xref:public-cloud-guide/payg/payg-find-the-aws-image.adoc[1. Locate the Image]
+***** xref:public-cloud-guide/payg/payg-configure-the-image.adoc[2. Configuration and Startup]
 ***** xref:public-cloud-guide/payg/payg-server-setup.adoc[3. Server Setup]
 ***** xref:public-cloud-guide/payg/payg-webui-configuration.adoc[4. WebUI Configuration]
 ***** xref:public-cloud-guide/payg/payg-bootstrapping-process.adoc[5. Connecting Clients]
