--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -22,17 +22,12 @@ endif::[]
 ***** xref:public-cloud-guide/payg/payg-server-setup.adoc[3. Server Setup]
 ***** xref:public-cloud-guide/payg/payg-webui-configuration.adoc[4. WebUI Configuration]
 ***** xref:public-cloud-guide/payg/payg-bootstrapping-process.adoc[5. Connecting Clients]
+***** xref:public-cloud-guide/payg/payg-support.adoc[Support]
 **** {payg} Appendix
+***** xref:public-cloud-guide/payg/payg-additional-resources.adoc[Additional Resources]
 ***** xref:public-cloud-guide/payg/payg-faq.adoc[{payg} FAQ]
 ***** xref:public-cloud-guide/payg/payg-country-listing.adoc[Supported Countries]
-//*** xref:public-cloud-guide/payg/payg-and-azure.adoc[PAYG and Azure]
-//**** xref:public-cloud-guide/payg/payg-getting-started-with-azure.adoc[Getting started with Azure]
-//**** xref:public-cloud-guide/payg/payg-azure-requirements[Azure requirements] 
-//**** xref:public-cloud-guide/payg/creating-an-azure-account.adoc[Creating an Azure account]
-//*** xref:public-cloud-guide/payg/payg-and-gcp.adoc[PAYG and Google Cloud Compute]
-//**** xref:public-cloud-guide/payg/payg-getting-started-with-gcp.adoc[Getting started with GCP]
-//**** xref:public-cloud-guide/payg/payg-gcp-requirements[GCP requirements] 
-//**** xref:public-cloud-guide/payg/creating-an-gcp-account.adoc[Creating an GCP account]
+
 ** xref:salt/salt-overview.adoc[Salt Guide]
 *** xref:salt/salt-terminology.adoc[Terminology]
 *** xref:salt/salt-command.adoc[Salt Command]
