--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-bootstrapping-process.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-bootstrapping-process.adoc
@@ -9,6 +9,11 @@ Bootstrapping PAYG images is supported and can be done without additional prereq
 BYOS (Bring Your Own Subscription) Images::
 Bootstrapping BYOS images requires SCC (SUSE Customer Center) credentials beforehand. If a user attempts to onboard a BYOS image without providing SCC credentials, the operation will fail, as these credentials are required to verify your subscription.
 
+[IMPORTANT]
+====
+Important: Do not register PAYG instances with the SUSE Customer Center.
+Registering PAYG instances with the SUSE Customer Center or your own RMT server will create conflicts that are not easily solved. Only register BYOS instances. PAYG instances are automatically registered against the correct update server.
+====
 
 [IMPORTANT]
 ====
