--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-find-the-aws-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-find-the-aws-image.adoc
@@ -1,6 +1,9 @@
 = Finding the SUSE Manager Server {productnumber} {payg} Image on AWS
 
-Follow these step-by-step instructions to locate the SUSE Manager {productnumber} {payg} image on AWS:
+Follow these step-by-step instructions to locate the SUSE Manager {productnumber} {payg} image on AWS.
+You can also find the latest available images for the public cloud using Pint(Public Cloud Information Tracker). 
+
+See: link:https://pint.suse.com/?_gl=1*15h4x0c*_ga*NDgxMzUxNzIyLjE2NzUyNTI4MTI.*_ga_JEVBS2XFKK*MTY5NzQ1NjA2Mi44Ny4xLjE2OTc0NTczMjUuNTcuMC4w&resource=help[pint.suse.com]
 
 
 .Procedure: Finding the {productname} {payg} image on AWS
